manifests/08-openviking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openviking
  namespace: openviking
  labels:
    app: openviking
spec:
  type: ClusterIP
  ports:
    - port: 1933
      targetPort: 1933
      protocol: TCP
      name: http
  selector:
    app: openviking
