manifests/06-openviking-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openviking
  namespace: openviking
spec:
  to:
    kind: Service
    name: openviking
  port:
    targetPort: http
  tls:
    termination: edge
